ImpressCMS ChangeLog

== Impresscms 1.1.1==

===2008-11-16 : 1.1.1 Beta===

'''Fixed'''
* #2245090: Captcha being bypassed
* #2098718: Sortlinks on Customtag-Table with bad color (sato-san)
* #2245744: OpenID registration not possible from user.php (stranger)

'''Added'''
* Implementing SimplePie as a new library and IcmsSimpleRss extending it for ImpressCMS. (malanciault)
* Implementing IcmsPersistableSingleView which provides an easy way to quickly display a single object information. (malanciault)
* Implementing IcmsPersistableTreeTable extending IcmsPersistableTable with the concept of nested objects. (malanciault)
* Implementing SimplePie as admin RSS. (stranger)
* Implementing icmsstopspammer to stop spammers. (stranger)
* smarty to change a theme&template between RTL and LTR. (stranger)
* smarty <{$smarty.const._GLOBAL_LEFT}> for templates. (stranger)
* smarty <{$smarty.const._GLOBAL_RIGHT}> for templates. (stranger)
* TinyMCE plugin icmsmlcontent. (stranger)
* Issues with ICMS Captcha Class. (stranger)
* New preferences category for captcha. (stranger)
* New option for "Captcha mode" in preferences. (stranger)
* New option for "Case sensitive" in preferences. (stranger)
* New option for "Maximum attemps" in preferences. (stranger)
* New option for "Minimum attemps" in preferences. (stranger)
* New option for "Minimum font-size" in preferences. (stranger)
* New option for "Maximum font-size" in preferences. (stranger)
* New option for "Background type" in preferences. (stranger)
* New option for "image amounts" in preferences. (stranger)
* New option for "polygon points" in preferences. (stranger)
* New option for "check groups" in preferences. (stranger)
* New option for "skip characters" in preferences. (stranger)
* New option for "disable captcha" in preferences. (stranger)
* New Function "icms_conv_nr2local". (stranger)
* New Function "icms_conv_local2nr". (stranger)
* New Function "Icms_getMonthNameById". (stranger)
* New Function "div". (stranger)