@@ -15333,5 +15333,3 @@ class HTMLPurifier_VarParser_Native extends HTMLPurifier_VarParser
     }
     
 }
-
-
